; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_draw-blend.c_fz_luminosity_rgb.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_draw-blend.c_fz_luminosity_rgb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i8*, i32, i32, i32, i32, i32, i32)* @fz_luminosity_rgb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fz_luminosity_rgb(i8* %0, i8* %1, i8* %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7, i32 %8) #0 {
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  store i8* %0, i8** %10, align 8
  store i8* %1, i8** %11, align 8
  store i8* %2, i8** %12, align 8
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  store i32 %8, i32* %18, align 4
  %27 = load i32, i32* %16, align 4
  %28 = load i32, i32* %13, align 4
  %29 = sub nsw i32 %27, %28
  %30 = mul nsw i32 %29, 77
  %31 = load i32, i32* %17, align 4
  %32 = load i32, i32* %14, align 4
  %33 = sub nsw i32 %31, %32
  %34 = mul nsw i32 %33, 151
  %35 = add nsw i32 %30, %34
  %36 = load i32, i32* %18, align 4
  %37 = load i32, i32* %15, align 4
  %38 = sub nsw i32 %36, %37
  %39 = mul nsw i32 %38, 28
  %40 = add nsw i32 %35, %39
  %41 = add nsw i32 %40, 128
  %42 = ashr i32 %41, 8
  store i32 %42, i32* %19, align 4
  %43 = load i32, i32* %13, align 4
  %44 = load i32, i32* %19, align 4
  %45 = add nsw i32 %43, %44
  store i32 %45, i32* %21, align 4
  %46 = load i32, i32* %14, align 4
  %47 = load i32, i32* %19, align 4
  %48 = add nsw i32 %46, %47
  store i32 %48, i32* %22, align 4
  %49 = load i32, i32* %15, align 4
  %50 = load i32, i32* %19, align 4
  %51 = add nsw i32 %49, %50
  store i32 %51, i32* %23, align 4
  %52 = load i32, i32* %21, align 4
  %53 = load i32, i32* %22, align 4
  %54 = or i32 %52, %53
  %55 = load i32, i32* %23, align 4
  %56 = or i32 %54, %55
  %57 = and i32 %56, 256
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %59, label %139

59:                                               ; preds = %9
  %60 = load i32, i32* %16, align 4
  %61 = mul nsw i32 %60, 77
  %62 = load i32, i32* %17, align 4
  %63 = mul nsw i32 %62, 151
  %64 = add nsw i32 %61, %63
  %65 = load i32, i32* %18, align 4
  %66 = mul nsw i32 %65, 28
  %67 = add nsw i32 %64, %66
  %68 = add nsw i32 %67, 128
  %69 = ashr i32 %68, 8
  store i32 %69, i32* %24, align 4
  %70 = load i32, i32* %19, align 4
  %71 = icmp sgt i32 %70, 0
  br i1 %71, label %72, label %92

72:                                               ; preds = %59
  %73 = load i32, i32* %21, align 4
  %74 = load i32, i32* %22, align 4
  %75 = load i32, i32* %23, align 4
  %76 = call i32 @fz_maxi(i32 %74, i32 %75)
  %77 = call i32 @fz_maxi(i32 %73, i32 %76)
  store i32 %77, i32* %25, align 4
  %78 = load i32, i32* %25, align 4
  %79 = load i32, i32* %24, align 4
  %80 = icmp eq i32 %78, %79
  br i1 %80, label %81, label %82

81:                                               ; preds = %72
  br label %90

82:                                               ; preds = %72
  %83 = load i32, i32* %24, align 4
  %84 = sub nsw i32 255, %83
  %85 = shl i32 %84, 16
  %86 = load i32, i32* %25, align 4
  %87 = load i32, i32* %24, align 4
  %88 = sub nsw i32 %86, %87
  %89 = sdiv i32 %85, %88
  br label %90

90:                                               ; preds = %82, %81
  %91 = phi i32 [ 0, %81 ], [ %89, %82 ]
  store i32 %91, i32* %20, align 4
  br label %111

92:                                               ; preds = %59
  %93 = load i32, i32* %21, align 4
  %94 = load i32, i32* %22, align 4
  %95 = load i32, i32* %23, align 4
  %96 = call i32 @fz_mini(i32 %94, i32 %95)
  %97 = call i32 @fz_mini(i32 %93, i32 %96)
  store i32 %97, i32* %26, align 4
  %98 = load i32, i32* %24, align 4
  %99 = load i32, i32* %26, align 4
  %100 = icmp eq i32 %98, %99
  br i1 %100, label %101, label %102

101:                                              ; preds = %92
  br label %109

102:                                              ; preds = %92
  %103 = load i32, i32* %24, align 4
  %104 = shl i32 %103, 16
  %105 = load i32, i32* %24, align 4
  %106 = load i32, i32* %26, align 4
  %107 = sub nsw i32 %105, %106
  %108 = sdiv i32 %104, %107
  br label %109

109:                                              ; preds = %102, %101
  %110 = phi i32 [ 0, %101 ], [ %108, %102 ]
  store i32 %110, i32* %20, align 4
  br label %111

111:                                              ; preds = %109, %90
  %112 = load i32, i32* %24, align 4
  %113 = load i32, i32* %21, align 4
  %114 = load i32, i32* %24, align 4
  %115 = sub nsw i32 %113, %114
  %116 = load i32, i32* %20, align 4
  %117 = mul nsw i32 %115, %116
  %118 = add nsw i32 %117, 32768
  %119 = ashr i32 %118, 16
  %120 = add nsw i32 %112, %119
  store i32 %120, i32* %21, align 4
  %121 = load i32, i32* %24, align 4
  %122 = load i32, i32* %22, align 4
  %123 = load i32, i32* %24, align 4
  %124 = sub nsw i32 %122, %123
  %125 = load i32, i32* %20, align 4
  %126 = mul nsw i32 %124, %125
  %127 = add nsw i32 %126, 32768
  %128 = ashr i32 %127, 16
  %129 = add nsw i32 %121, %128
  store i32 %129, i32* %22, align 4
  %130 = load i32, i32* %24, align 4
  %131 = load i32, i32* %23, align 4
  %132 = load i32, i32* %24, align 4
  %133 = sub nsw i32 %131, %132
  %134 = load i32, i32* %20, align 4
  %135 = mul nsw i32 %133, %134
  %136 = add nsw i32 %135, 32768
  %137 = ashr i32 %136, 16
  %138 = add nsw i32 %130, %137
  store i32 %138, i32* %23, align 4
  br label %139

139:                                              ; preds = %111, %9
  %140 = load i32, i32* %21, align 4
  %141 = call zeroext i8 @fz_clampi(i32 %140, i32 0, i32 255)
  %142 = load i8*, i8** %10, align 8
  store i8 %141, i8* %142, align 1
  %143 = load i32, i32* %22, align 4
  %144 = call zeroext i8 @fz_clampi(i32 %143, i32 0, i32 255)
  %145 = load i8*, i8** %11, align 8
  store i8 %144, i8* %145, align 1
  %146 = load i32, i32* %23, align 4
  %147 = call zeroext i8 @fz_clampi(i32 %146, i32 0, i32 255)
  %148 = load i8*, i8** %12, align 8
  store i8 %147, i8* %148, align 1
  ret void
}

declare dso_local i32 @fz_maxi(i32, i32) #1

declare dso_local i32 @fz_mini(i32, i32) #1

declare dso_local zeroext i8 @fz_clampi(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
